<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:fillViewport="true"
    android:background="#fff">

    <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                
    <include layout="@layout/search_layout"/>
        
  	<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp" >

                <Button
                    style="@style/buttonSelectTransportStyle"
			        android:drawableTop="@drawable/rer"
			        android:text="@string/rer" />
                
                <Button
                    style="@style/buttonSelectTransportStyle"
			        android:drawableTop="@drawable/bus"
			        android:text="@string/bus" />
            </LinearLayout>
	
		    <LinearLayout
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="horizontal"
		                android:layout_marginTop="25dp" >
		
		                <Button
							style="@style/buttonSelectTransportStyle"
					        android:drawableTop="@drawable/metro"
					        android:text="@string/metro" />
                
		                <Button
							style="@style/buttonSelectTransportStyle"
					        android:drawableTop="@drawable/tramway"
					        android:text="@string/tramway" />
		    </LinearLayout>
	</LinearLayout>
</ScrollView>
