<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scrollViewStyle" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewUpdateStation"
            style="@style/textViewStyle"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="10dp"
                android:text="@string/name_update_station" />

            <EditText style="@style/editTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="10dp"
                android:text="@string/longitude" />

            <EditText style="@style/editTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="10dp"
                android:text="@string/latitude" />

            <EditText style="@style/editTextStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddStations"
            style="@style/buttonStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:onClick="onButtonAddStationsClick"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>